microsite: fix search box breakage and avoid unecessary wrapping

--- a/microsite/static/css/custom.css
+++ b/microsite/static/css/custom.css
@@ -146,6 +146,11 @@ td {
   content: "No results"
 }
 
+.navSearchWrapper {
+  /* Prevents the search box from detaching from its icon when pushed down */
+  justify-content: flex-start;
+}
+
 /* header */
 .fixedHeaderContainer {
   position: fixed;
@@ -155,6 +160,12 @@ td {
   box-shadow: 3px 3px 8px rgba(38, 38, 38, 0.25);
   color: #fff;
 }
+
+.wrapper.headerWrapper {
+  /* Keep the header stretched across the screen on the mid breakpoint, since we need a bit more space */
+  max-width: 1400px;
+}
+
 @media only screen and (min-width: 1024px) {
   .fixedHeaderContainer {
     height: 66px;
